--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Max Strickland's Website</title>
-</head>
-<body>
-<h1> Max Strickland's CSCE 190 Website</h1>
-<text> Hi! My name is Max and I'm currently a 17-year-old student studying Computer Science at the University of South Carolina!</text>
-</body>        
+    <head>
+        <title> Max Strickland's Website</title>
+    </head>
+    <body>
+        <h1> Max Strickland's CSCE 190 Website</h1>
+        <section class="assignment">
+            <img src="CSCE190ProblemStatement - Copy.PNG">
+        <section class="assignmentText">
+            <h2>Problem Statement: Money Management</h2>
+            <p>College students need an app that simplifies the budgeting process and helps them make logical investments and optimize their money management. </p>
+            <text> Find the PDF document here:</text>
+            <a href="CSCE190 Problem Statement.pdf">Click me!</a>
+        </section>
+
+        </section>
+    </body>        
 </html>
