--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1> Max Strickland's CSCE 190 Website</h1>
         <section class="assignment">
-            <img src="CSCE190ProblemStatement - Copy.PNG">
+           <a href="CSCE190 Problem Statement.pdf"><img src="CSCE190ProblemStatement - Copy.PNG"></a>
         <section class="assignmentText">
             <h2>Problem Statement: Money Management</h2>
             <p>College students need an app that simplifies the budgeting process and helps them make logical investments and optimize their money management. </p>
