--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <body>
         <h1> Max Strickland's CSCE 190 Website</h1>
         <section class="assignment">
-           <a href="CSCE190 Problem Statement.pdf"><img src="CSCE190ProblemStatement - Copy.PNG"></a>
-        <section class="assignmentText">
-            <h2>Problem Statement: Money Management</h2>
-            <p>College students need an app that simplifies the budgeting process and helps them make logical investments and optimize their money management. </p>
-            <text> Find the PDF document here:</text>
-            <a href="CSCE190 Problem Statement.pdf">Click me!</a>
+            <!-- Problem Statement --> 
+            <a href="CSCE190 Problem Statement.pdf"><img src="CSCE190ProblemStatement - Copy.PNG"></a>
+            <section class="assignmentText">
+                <h2>Problem Statement: Money Management</h2>
+                <p>College students need an app that simplifies the budgeting process and helps them make logical investments and optimize their money management. </p>
+                <text> Find the PDF document here:</text>
+                <a href="CSCE190 Problem Statement.pdf">Click me!</a>
+            </section>
         </section>
 
+        <section class="assignment">
+            <!-- Affinity Diagram --> 
+            <a href="Managing Money for College Students.pdf"><img src="affinityDiagram.PNG"></a>
+            <section class="assignmentText">
+                <h2>Affinity Diagram</h2>
+                <p>My group looked into potential clients and possible functionality, amongst other things. </p>
+                <text> Find the PDF document here:</text>
+                <a href="Managing Money for College Students.pdf">Click me!</a>
+            </section>
         </section>
     </body>        
 </html>
