--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> Max Strickland's Website</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1> Max Strickland's CSCE 190 Website</h1>
