--- a/index.html
+++ b/index.html
@@ -27,5 +27,16 @@
                 <a href="Managing Money for College Students.pdf">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Persona Assignment --> 
+            <a href="LeeroyJenkins.pdf"><img src="LeeroyJenkins.PNG"></a>
+            <section class="assignmentText">
+                <h2>Meet Leeroy Jenkins</h2>
+                <p> It is important to think of the types of clients that will use your product. Leeroy is an introverted gamer who needs to learn how to manage money. </p>
+                <text> Find the PDF document here:</text>
+                <a href="Managing Money for College Students.pdf">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
