--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
                 <a href="Storyboard.pdf">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Sketches --> 
+            <a href="Sketches.pdf"><img src="sketchiz.PNG"></a>
+            <section class="assignmentText">
+                <h2>Sketches</h2>
+                <p> Here are some roughly drawn sketches for the app screens. </p>
+                <text> Find the PDF document here:</text>
+                <a href="Sketches.pdf">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
