--- a/index.html
+++ b/index.html
@@ -60,5 +60,16 @@
                 <a href="Sketches.pdf">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Paper Prototype --> 
+            <img src="post-it-note.jpg"></a>
+            <section class="assignmentText">
+                <h2>Paper Prototype</h2>
+                <p> In this video I go through the main screens of our potential app. </p>
+                <text> Find the youtube video here:</text>
+                <a href="https://youtu.be/PGn_oUCP-1s">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
