--- a/index.html
+++ b/index.html
@@ -71,5 +71,16 @@
                 <a href="https://youtu.be/PGn_oUCP-1s">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Usability Test --> 
+            <a href="Usability Test.pdf"><img src="useTest.PNG"></a>
+            <section class="assignmentText">
+                <h2>Usability Test</h2>
+                <p> I asked people to complete several tasks necessary to use the app and learned about the strengths and flaws of our design. </p>
+                <text> Find the PDF document here:</text>
+                <a href="Usability Test.pdf">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
