--- a/index.html
+++ b/index.html
@@ -82,5 +82,16 @@
                 <a href="Usability Test.pdf">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Lo-fi Prototype --> 
+            <a href="BudgetApp (TM) (C) (R).pdf"><img src="BudgetApp (TM) (C) (R).png"></a>
+            <section class="assignmentText">
+                <h2>Lo-fi Prototype</h2>
+                <p> This is a lo-fi prototype that shows basic motion of our app. </p>
+                <text> Find the PDF document here:</text>
+                <a href="BudgetApp (TM) (C) (R).pdf">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
