--- a/index.html
+++ b/index.html
@@ -93,5 +93,16 @@
                 <a href="BudgetApp (TM) (C) (R).pdf">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Hi-fi Prototype --> 
+            <a href="BudgetApp (TM) (C) (R)-html (1).zip"><img src="hi-fi.PNG"></a>
+            <section class="assignmentText">
+                <h2>Hi-fi Prototype</h2>
+                <p> This is a hi-fi prototype that cleans up the art somewhat. </p>
+                <text> Find the HTML here:</text>
+                <a href="BudgetApp (TM) (C) (R)-html (1).zip">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
