--- a/index.html
+++ b/index.html
@@ -104,5 +104,16 @@
                 <a href="BudgetApp (TM) (C) (R)-html (1).zip">Click me!</a>
             </section>
         </section>
+
+        <section class="assignment">
+            <!-- Hi-fi Video --> 
+            <a href="https://www.youtube.com/watch?v=joGULyKldfY&feature=emb_logo"><img src="mlemFinVid.PNG"></a>
+            <section class="assignmentText">
+                <h2>Hi-fi Prototype</h2>
+                <p> This is a video that shows the functionality of the hi-fi prototype. </p>
+                <text> Find the YouTube link here:</text>
+                <a href="https://www.youtube.com/watch?v=joGULyKldfY&feature=emb_logo">Click me!</a>
+            </section>
+        </section>
     </body>        
 </html>
